fix: formatting of registration mobile

--- a/client/src/pages/RegistrationPage/RegistrationPage.module.css
+++ b/client/src/pages/RegistrationPage/RegistrationPage.module.css
@@ -2,10 +2,10 @@
         display: grid;
         grid-template-columns:1fr 1fr 1fr 1fr;
         grid-template-rows:repeat 11(1fr);
-        width: 330px;
+        width: 380px;
         margin: 0 auto;
         padding: 20px 42px;
-        padding-left: 60px;
+        padding-bottom: 0;
         background-color: #FCF9F6;
     }
 
@@ -13,10 +13,10 @@
         display: grid;
         grid-template-columns:1fr 1fr 1fr;
         grid-template-rows: repeat 10(1fr);
-        width: 330px;
+        width: 380px;
         margin: 0 auto;
         padding: 20px 42px;
-        padding-left: 60px;
+        padding-top: 0;
         background-color: #FCF9F6;
     }
 
@@ -37,7 +37,7 @@
     .fullnameInput {
         grid-column: 1 / 5;
         grid-row: 3 / 4;
-        max-width :310px;
+        width :375px;
         height: 40px;
         margin: 1% 0;
         border-radius: 5px;
@@ -57,7 +57,7 @@
     .emailInput {
         grid-column: 1 / 5;
         grid-row: 5 / 6;
-        max-width :310px;
+        width :375px;
         height: 40px;
         margin: 1% 0;
         border-radius: 5px;
@@ -77,7 +77,7 @@
     .passwordInput {
         grid-column: 1 / 5;
         grid-row: 7 / 8;
-        max-width :310px;
+        width :375px;
         height: 40px;
         margin: 1% 0;
         border-radius: 5px;
@@ -96,7 +96,7 @@
     
     .passwordCfmInput {
         grid-column: 1 / 5;
-        max-width :310px;
+        width :375px;
         height: 40px;
         margin: 1% 0;
         grid-row: 9 / 10;
@@ -117,7 +117,7 @@
     .locationInput {
         grid-column: 1 / 3;
         grid-row: 11 / 12;
-        max-width: 140px;
+        width: 179px;
         height: 40px;
         margin: 5px 0;
         border-radius: 5px;
@@ -134,16 +134,18 @@
         text-align: left;
         font-weight: 400;
         align-self: center;
+        margin-left: 6px;
     }
     
     .genderInput {
         grid-column: 3 / 5;
         grid-row: 11 / 12;
-        max-width: 155px;
+        width: 184px;
         height: 45px;
         margin-top: 4px;
         border-radius: 5px;
         background-color: #F7EDE1;
+        margin-left: 6px;
     }
     
     .skintypeLabel {
@@ -169,7 +171,7 @@
         margin-top: 6px;
         grid-column: 1 / 2;
         grid-row: 3 / 4;
-        justify-self: center;
+        justify-self: start;
     }
     
     .normalLabel {
@@ -183,14 +185,14 @@
         margin-top: 6px;
         grid-column: 3 / 4;
         grid-row: 3 / 4;
-        justify-self: center;
+        justify-self: end;
     }
     
     .combinationLabel {
         margin-top: 30px;
         grid-column: 1 / 2;
         grid-row: 4 / 5;
-        justify-self: center;
+        justify-self: start;
     }
     
     .sensitiveLabel {
@@ -213,7 +215,7 @@
         margin-top: 15px;
         grid-column: 1 / 2;
         grid-row: 6 / 7;
-        justify-self: center;
+        justify-self: left;
     }
     
     .drynessLabel  {
@@ -227,14 +229,14 @@
         margin-top: 15px;
         grid-column: 3 / 4;
         grid-row: 6 / 7;
-        justify-self: center;
+        justify-self: end;
     }
     
     .blemishesLabel {
         margin-top: 30px;
         grid-column: 1 / 2;
         grid-row: 7 / 8;
-        justify-self: center;
+        justify-self: left;
     }
     
     .darkspotsLabel {
@@ -248,14 +250,14 @@
         margin-top: 30px;
         grid-column: 3 / 4;
         grid-row: 7 / 8;
-        justify-self: center;
+        justify-self: end;
     }
     
     .redlinesLabel {
         margin-top: 30px;
         grid-column: 1 / 2;
         grid-row: 8 / 9;
-        justify-self: center;
+        justify-self: left;
     }
     
     .finelinesLabel {
